--- a/src/App.css
+++ b/src/App.css
@@ -7,7 +7,9 @@
 }
 
 .pages {
-  padding-left: 2rem;
-  padding-right: 2rem;
+  padding-left: 150px;
+  padding-right: 150px;
+  padding-top: 25px;
+  padding-bottom: 25px;
   height: 100%;
 }
