--- a/src/pages/Home.css
+++ b/src/pages/Home.css
@@ -1,7 +1,7 @@
 .home {
   display: flex;
   justify-content: center;
-  padding-top: 5rem;
+  padding-top: 25px;
 }
 
 .home-container {
@@ -10,8 +10,6 @@
   justify-content: center;
   width: 100%;
   justify-content: center;
-  padding-left: 8rem;
-  padding-right: 8rem;
 }
 
 .xinto > img {
@@ -27,7 +25,6 @@
   display: flex;
   flex-direction: column;
   gap: 0.5rem;
-  color: var(--color-on-background);
 }
 
 .home-info-media {
