--- a/src/pages/Home.css
+++ b/src/pages/Home.css
@@ -12,7 +12,7 @@
   justify-content: center;
 }
 
-.xinto > img {
+.xinto * {
   border: var(--color-outline) dashed;
   border-radius: 0.5rem;
   object-fit: cover;
