--- a/src/pages/Projects.css
+++ b/src/pages/Projects.css
@@ -1,4 +1,4 @@
-.project-container {
+.projects-container {
   display: inline-grid;
   grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
   grid-gap: 50px;
@@ -6,7 +6,7 @@
   margin-top: 25px;
 }
 
-.project {
+.projects {
   height: 100%;
   width: 100%;
   display: flex;
