--- a/src/pages/Projects.css
+++ b/src/pages/Projects.css
@@ -1,9 +1,13 @@
 .projects-container {
   display: inline-grid;
   grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
-  grid-gap: 50px;
   width: 100%;
   margin-top: 25px;
+  justify-items: center;
+}
+
+.projects-container > * {
+  margin: 25px;
 }
 
 .projects {
