--- a/src/index.css
+++ b/src/index.css
@@ -23,7 +23,7 @@
 
 body {
   background-color: var(--color-background);
-  font-family: 'Inter';
+  font-family: 'Inter', sans-serif;
   height: 100vh;
   width: 100vw;
   color: var(--color-on-background);
