--- a/src/pages/Home.module.css
+++ b/src/pages/Home.module.css
@@ -6,18 +6,28 @@
 
 .home-container {
   display: flex;
+  flex-direction: column;
   gap: 1.5rem;
   justify-content: center;
   width: 100%;
-  justify-content: center;
 }
 
 .xinto * {
   border: var(--color-outline) dashed;
   border-radius: 0.5rem;
   object-fit: cover;
-  width: 25rem;
-  height: 25rem;
+  width: 100%;
+  aspect-ratio: 1/1;
+}
+
+@media (min-width: 768px) {
+  .home-container {
+    flex-direction: row;
+  }
+
+  .xinto * {
+    width: 25rem;
+  }
 }
 
 .home-info {
