--- a/src/App.module.css
+++ b/src/App.module.css
@@ -1,17 +1,20 @@
 .app {
   display: flex;
   flex-direction: column;
-  gap: 1rem;
   height: 100%;
   width: 100%;
 }
 
 .pages {
-  padding: 25px;
+  padding: 20px;
   height: 100%;
 }
 
 @media (min-width: 768px) {
+  .app {
+    gap: 15px;
+  }
+
   .pages {
     padding: 25px 150px;
   }
