--- a/src/components/Card.css
+++ b/src/components/Card.css
@@ -1,12 +1,12 @@
 .card {
   outline: 1px solid var(--color-outline);
   border-radius: 12px;
-  width: 250px;
   transition: all 0.5s;
   display: flex;
   flex-direction: column;
   gap: 5px;
   text-decoration: none;
+  width: 100%;
 }
 
 .card:hover {
