--- a/src/pages/Projects.module.css
+++ b/src/pages/Projects.module.css
@@ -2,12 +2,13 @@
   display: inline-grid;
   grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
   width: 100%;
-  margin-top: 25px;
-  justify-items: center;
+  gap: 20px;
 }
 
-.projects-container > * {
-  margin: 25px;
+@media (min-width: 768px) {
+  .projects-container {
+    margin-top: 25px;
+  }
 }
 
 .projects {
