--- a/src/components/Topbar.css
+++ b/src/components/Topbar.css
@@ -3,10 +3,7 @@
   flex-direction: row;
   justify-content: center;
   align-items: center;
-  padding-right: 3rem;
-  padding-left: 3rem;
-  padding-top: 1rem;
-  padding-bottom: 1rem;
+  padding: 1rem 3rem;
   gap: 1rem;
   border-bottom: 1px solid var(--color-outline);
 }
@@ -20,6 +17,10 @@
   border-radius: 0.5rem;
   padding: 0.6rem;
   text-decoration: none;
+}
+
+.topbar-link[data-selected=true] {
+  outline: 2px solid var(--color-outline);
 }
 
 .topbar-link:hover {
